# advent-of-code-2024

./: Cargo.toml  README.md
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/: Cargo.toml
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/src/: main.rs
day-09/: Cargo.toml
day-09/src/: main.rs
tree/: Cargo.toml
utils/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: create.rs  main.rs
