[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.19.1"
clap = { version = "4.0.18", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
indoc = "2.0.4"
log = { version = "0.4.17", features = ["std"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
xshell = "0.2.2"
